fixed broken css path

--- a/_includes/styles/_vars.scss
+++ b/_includes/styles/_vars.scss
@@ -1,12 +1,11 @@
 //BigBag - Variables
 
 /*=== VARIABLES ===*/
-$primary-color:#47bac1;
+$primary-color:#008ebd;
 $primary-color-light:#4dc8cf;
 $primary-color-lightess:#92d5d9;
 $primary-color-lighter: #47aeb5;
 $secondary-color:#252525;
-
 
 $text-color:$secondary-color;
 $text-light:#acacac;
